Fix resume PDF filename in index.html

--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
     <section id="resume">
       <h2 class="section-title">Resume</h2>
       <div class="card" id="resume-note">
-        <p>Place a PDF named <code>Raven_Mott_Resume.pdf</code> in the same folder and link it below:</p>
-        <p><a class="btn secondary" href="Raven_Mott_Resume.pdf" target="_blank" rel="noopener">Open Resume (PDF)</a></p>
+        <p>Place a PDF named <code>Raven Mott_Resume.pdf</code> in the same folder and link it below:</p>
+        <p><a class="btn secondary" href="Raven Mott_Resume.pdf" target="_blank" rel="noopener">Open Resume (PDF)</a></p>
       </div>
     </section>
   </main>
