--- a/index.html
+++ b/index.html
@@ -246,9 +246,39 @@
     <section id="resume">
       <h2 class="section-title">Resume</h2>
       <div class="card" id="resume-note">
-        <p>Place a PDF named <code>Raven Mott_Resume.pdf</code> in the same folder and link it below:</p>
-        <p><a class="btn secondary" href="Raven Mott_Resume.pdf" target="_blank" rel="noopener">Open Resume (PDF)</a></p>
+        <p>Place a PDF named <code>Raven_Mott_Resume.pdf</code> in the same folder and link it below:</p>
+        <p><a class="btn secondary" href="Raven_Mott_Resume.pdf" target="_blank" rel="noopener">Open Resume (PDF)</a></p>
       </div>
+    </section>
+
+    <!-- SLIDES -->
+    <section id="slides">
+      <h2 class="section-title">Slides</h2>
+      <div class="grid cards">
+        <div class="card">
+          <h3 style="margin:0 0 8px; font-size:18px;">Climate & Yield — Deep Learning Study</h3>
+          <p style="margin:0 0 8px; color:var(--muted)">MS‑CC research deck summarizing LSTM vs. tree ensembles for U.S. crop yields.</p>
+          <div style="aspect-ratio:16/9; width:100%; background: color-mix(in oklab, var(--panel), #fff 4%); border-radius:12px; overflow:hidden; border:1px solid color-mix(in oklab, var(--panel), #fff 10%);">
+            <iframe title="Evaluating Climate Change Effects on Agricultural Yield Using Deep Learning" src="Evaluating-Climate-Change-Effects-on-Agricultural-Yield-Using-Deep-Learning.pdf#zoom=page-fit" style="width:100%; height:100%; border:0;" loading="lazy"></iframe>
+          </div>
+          <p style="font-size:14px; color: var(--muted); margin-top:8px;">If the PDF viewer doesn't display, <a href="Evaluating-Climate-Change-Effects-on-Agricultural-Yield-Using-Deep-Learning.pdf" target="_blank" rel="noopener">open in a new tab</a>.</p>
+        </div>
+        <div class="card">
+          <h3 style="margin:0 0 8px; font-size:18px;">Uber 2016 Breach — Corporate Secrecy</h3>
+          <p style="margin:0 0 8px; color:var(--muted)">Case study on the breach, cover‑up, and legal consequences; lessons for cyber programs.</p>
+          <div style="aspect-ratio:16/9; width:100%; background: color-mix(in oklab, var(--panel), #fff 4%); border-radius:12px; overflow:hidden; border:1px solid color-mix(in oklab, var(--panel), #fff 10%);">
+            <iframe title="The 2016 Uber Data Breach: Corporate Secrecy and Its Consequences" src="The-2016-Uber-Data-Breach-Corporate-Secrecy-and-Its-Consequences.pdf#zoom=page-fit" style="width:100%; height:100%; border:0;" loading="lazy"></iframe>
+          </div>
+          <p style="font-size:14px; color: var(--muted); margin-top:8px;">If the PDF viewer doesn't display, <a href="The-2016-Uber-Data-Breach-Corporate-Secrecy-and-Its-Consequences.pdf" target="_blank" rel="noopener">open in a new tab</a>.</p>
+        </div>
+        <div class="card">
+          <h3 style="margin:0 0 8px; font-size:18px;">Gestura — Senior Project Overview</h3>
+          <p style="margin:0 0 8px; color:var(--muted)">Slides outlining Gestura's goals, timeline, and tech stack (Android, TFLite, Firebase).</p>
+          <div style="aspect-ratio:16/9; width:100%; background: color-mix(in oklab, var(--panel), #fff 4%); border-radius:12px; overflow:hidden; border:1px solid color-mix(in oklab, var(--panel), #fff 10%);">
+            <iframe title="Gestura: AI‑Powered Mobile Application for Inclusive Communication" src="Gestura-AI-Powered-Mobile-Application-for-Inclusive-Communication.pdf#zoom=page-fit" style="width:100%; height:100%; border:0;" loading="lazy"></iframe>
+          </div>
+          <p style="font-size:14px; color: var(--muted); margin-top:8px;">If the PDF viewer doesn't display, <a href="Gestura-AI-Powered-Mobile-Application-for-Inclusive-Communication.pdf" target="_blank" rel="noopener">open in a new tab</a>.</p>
+        </div>
     </section>
   </main>
 
