--- a/index.html
+++ b/index.html
@@ -246,7 +246,12 @@
     <section id="resume">
       <h2 class="section-title">Resume</h2>
       <div class="card" id="resume-note">
-        <p><a class="btn secondary" src="RRaven Mott_resume.pdf" target="_blank" rel="noopener">Open Resume (PDF)</a></p>
+        <p>Your resume is embedded below. Make sure a PDF named <code>Raven_Mott_Resume.pdf</code> sits in the <strong>same folder</strong> as <code>index.html</code>.</p>
+        <div style="aspect-ratio: 8.5/11; width:100%; max-height: 90vh; background: color-mix(in oklab, var(--panel), #fff 4%); border-radius:12px; overflow:hidden; border:1px solid color-mix(in oklab, var(--panel), #fff 10%);">
+          <iframe title="Raven Mott — Resume" src="Raven Mott_Resume.pdf#zoom=page-fit" style="width:100%; height:100%; border:0;" loading="lazy"></iframe>
+        </div>
+        <p style="margin-top:10px"><a class="btn secondary" href="Raven_Mott_Resume.pdf" target="_blank" rel="noopener">Open Resume in New Tab</a></p>
+        <p style="font-size:14px; color:var(--muted)">No PDF yet? Export your DOCX to PDF and name it exactly <code>Raven Mott_Resume.pdf</code>. Alternatively embed a Google Drive viewer URL if you host the file there.</p>
       </div>
     </section>
 
@@ -278,6 +283,7 @@
           </div>
           <p style="font-size:14px; color: var(--muted); margin-top:8px;">If the PDF viewer doesn't display, <a href="Gestura-AI-Powered-Mobile-Application-for-Inclusive-Communication.pdf" target="_blank" rel="noopener">open in a new tab</a>.</p>
         </div>
+      </div>
     </section>
   </main>
 
