Revise hero section and add skills details
Updated personal introduction and skills section to reflect a broader range of technologies and experiences.

--- a/index.html
+++ b/index.html
@@ -103,36 +103,52 @@
     <section class="hero" id="top">
       <div>
         <span class="badge" title="Virginia State University">CS @ VSU ’26 • Honors</span>
-        <h1>Android • AI/ML • Cybersecurity<br />I build inclusive, data‑driven tools.</h1>
-        <p class="lead">I’m Raven Mott — a Computer Science student focused on mobile AI (Jetpack Compose, TFLite), data science, and secure systems. Current flagship: <strong>Gestura</strong>, an AI‑powered ASL translator app.</p>
+        <h1>Android • Web • Data/ML • Cybersecurity<br />I build inclusive, reliable software.</h1>
+        <p class="lead">I’m Raven Mott — a Computer Science student who ships end‑to‑end: Android (Jetpack Compose), full‑stack web (HTML/CSS/JS, Flask, Firebase), data & ML (TensorFlow/Sklearn), and cybersecurity/digital forensics (Wireshark, Autopsy, FTK). Current flagship: <strong>Gestura</strong>, an AI‑powered ASL translator app.</p>
         <div class="chips" role="list" aria-label="Skills">
           <span class="chip" role="listitem">Kotlin / Compose</span>
-          <span class="chip" role="listitem">Python • ML</span>
+          <span class="chip" role="listitem">Java</span>
+          <span class="chip" role="listitem">Python</span>
+          <span class="chip" role="listitem">C++</span>
+          <span class="chip" role="listitem">R</span>
+          <span class="chip" role="listitem">SQL</span>
+          <span class="chip" role="listitem">HTML • CSS • JS</span>
+          <span class="chip" role="listitem">Flask</span>
+          <span class="chip" role="listitem">Firebase</span>
           <span class="chip" role="listitem">TensorFlow / TFLite</span>
-          <span class="chip" role="listitem">FastAPI</span>
+          <span class="chip" role="listitem">Scikit‑learn</span>
+          <span class="chip" role="listitem">SVM • XGBoost • LSTM</span>
           <span class="chip" role="listitem">Docker</span>
-          <span class="chip" role="listitem">R / Data Viz</span>
+          <span class="chip" role="listitem">FastAPI</span>
           <span class="chip" role="listitem">GitHub Actions</span>
+          <span class="chip" role="listitem">Tableau • Power BI</span>
+          <span class="chip" role="listitem">Wireshark • Autopsy • FTK</span>
+          <span class="chip" role="listitem">Cisco Packet Tracer</span>
+          <span class="chip" role="listitem">Figma (UI/UX)</span>
         </div>
         <div style="display:flex; gap:10px; flex-wrap:wrap;">
           <a class="btn" href="#projects">See Projects</a>
           <a class="btn secondary" href="https://www.linkedin.com/in/raven1202" target="_blank" rel="noopener">LinkedIn</a>
+          <a class="btn secondary" href="#skills">Skills</a>
           <a class="btn secondary" href="#resume" onclick="document.getElementById('resume-note').scrollIntoView({behavior:'smooth'}); return false;">Resume</a>
         </div>
       </div>
       <div class="hero-card" aria-label="Key stats">
-        <h2 style="margin:0 0 10px;font-size:20px;">Highlights</h2>
+        <img src="https://unavatar.io/https://www.linkedin.com/in/raven1202" alt="Raven Mott profile photo" style="width:128px;height:128px;border-radius:50%;object-fit:cover;display:block;margin:0 auto 12px;border:2px solid color-mix(in oklab, var(--panel), #fff 14%); box-shadow: var(--shadow);" />
+        <h2 style="margin:0 0 10px;font-size:20px;text-align:center;">Highlights</h2>
         <ul style="margin:0;padding-left:18px;color:var(--muted)">
+          <li>Android, Web, Data/ML, & Cyber Forensics</li>
           <li>IBM SkillsBuild Cohort Lead (Fall ’25)</li>
           <li>MS‑CC Undergraduate Research — Climate & Yield</li>
           <li>Senior Project I @ VSU — <em>Gestura</em></li>
-          <li>Accepted to multiple research programs & fellowships</li>
         </ul>
         <div class="meta" style="margin-top:14px;">
-          <span>Security & ML</span>
-          <span>HPC & Data</span>
-          <span>Community Mentor</span>
+          <span>Mobile & Full‑Stack</span>
+          <span>ML & Analytics</span>
+          <span>Cyber & Forensics</span>
+          <span>UI/UX</span>
         </div>
+      </div>
       </div>
     </section>
 
@@ -140,7 +156,7 @@
     <section id="about">
       <h2 class="section-title">About</h2>
       <div class="card">
-        <p>Driven by accessibility and impact, I design systems that connect people across barriers — from sign‑language translation to climate‑aware agriculture. I enjoy end‑to‑end building: data engineering → modeling → API → mobile UI.</p>
+        <p>I’m Raven Mott, a CS student at Virginia State University (’26, Honors) who builds end‑to‑end systems at the intersection of mobile apps, data/ML, and cybersecurity. VSU’s support reshaped my path, and I try to honor that by shipping work that serves people—whether it’s <em>Gestura</em>, my AI‑powered ASL translator inspired by Deaf family, climate‑to‑yield modeling that pairs rigor with real agronomy, or a malware triage pipeline that treats chain‑of‑custody as a first‑class requirement. I lead by serving—mentoring peers, doing outreach, and connecting technical work to measurable public benefit. Long‑term, I plan to serve in the Air Force’s cyber mission (17X) and later continue in federal service (FBI/CIA), focusing on secure systems, digital forensics, and trustworthy ML. Bottom line: I build reliable software that people can depend on—and I follow through until it’s useful in the real world.</p>
       </div>
     </section>
 
@@ -185,6 +201,38 @@
         </article>
       </div>
       <p style="margin-top:14px"><a class="btn secondary" href="https://github.com/Rmot1202?tab=repositories" target="_blank" rel="noopener">Browse All Repositories</a></p>
+    </section>
+
+    <!-- SKILLS -->
+    <section id="skills">
+      <h2 class="section-title">Skills</h2>
+      <div class="grid cards">
+        <article class="card">
+          <h3>Mobile & Frontend</h3>
+          <p>Android (Kotlin/Jetpack Compose), Java, HTML, CSS, JavaScript, UI state & navigation, accessibility, responsive design.</p>
+          <div class="meta"><span>Kotlin</span><span>Compose</span><span>Java</span><span>HTML/CSS/JS</span><span>Figma</span></div>
+        </article>
+        <article class="card">
+          <h3>Backend & Data</h3>
+          <p>Python (Flask, FastAPI), REST APIs, SQL/SQLite, Firebase (Auth, Firestore, Storage, Functions), Docker, GitHub Actions CI.</p>
+          <div class="meta"><span>Flask</span><span>FastAPI</span><span>SQL</span><span>Firebase</span><span>Docker</span></div>
+        </article>
+        <article class="card">
+          <h3>Machine Learning & Analytics</h3>
+          <p>TensorFlow/TFLite, scikit‑learn; SVM, Logistic Regression, Decision Trees, XGBoost/GBM, K‑means, LSTM; Tableau & Power BI dashboards.</p>
+          <div class="meta"><span>TensorFlow</span><span>TFLite</span><span>Sklearn</span><span>XGBoost</span><span>LSTM</span></div>
+        </article>
+        <article class="card">
+          <h3>Cybersecurity & Forensics</h3>
+          <p>Network design & analysis, packet capture, disk/memory forensics, evidence handling; tools include Wireshark, Autopsy, FTK Imager, Cisco Packet Tracer.</p>
+          <div class="meta"><span>Wireshark</span><span>Autopsy</span><span>FTK</span><span>Packet Tracer</span></div>
+        </article>
+        <article class="card">
+          <h3>Data Science Toolkit</h3>
+          <p>R for spatial stats & visualization; Python for notebooks & pipelines; reproducible EDA, temporal CV, and model tracking.</p>
+          <div class="meta"><span>R</span><span>Pandas</span><span>Matplotlib</span><span>EDA</span></div>
+        </article>
+      </div>
     </section>
 
     <!-- RESEARCH -->
@@ -250,8 +298,8 @@
         <div style="aspect-ratio: 8.5/11; width:100%; max-height: 90vh; background: color-mix(in oklab, var(--panel), #fff 4%); border-radius:12px; overflow:hidden; border:1px solid color-mix(in oklab, var(--panel), #fff 10%);">
           <iframe title="Raven Mott — Resume" src="Raven Mott_resume.pdf#zoom=page-fit" style="width:100%; height:100%; border:0;" loading="lazy"></iframe>
         </div>
-        <p style="margin-top:10px"><a class="btn secondary" href="Raven_Mott_resume.pdf" target="_blank" rel="noopener">Open Resume in New Tab</a></p>
-        <p style="font-size:14px; color:var(--muted)">No PDF yet? Export your DOCX to PDF and name it exactly <code>Raven Mott_Resume.pdf</code>. Alternatively embed a Google Drive viewer URL if you host the file there.</p>
+        <p style="margin-top:10px"><a class="btn secondary" href="Raven Mott_resume.pdf" target="_blank" rel="noopener">Open Resume in New Tab</a></p>
+        <p style="font-size:14px; color:var(--muted)">No PDF yet? Export your DOCX to PDF and name it exactly <code>Raven_Mott_Resume.pdf</code>. Alternatively embed a Google Drive viewer URL if you host the file there.</p>
       </div>
     </section>
 
@@ -284,6 +332,12 @@
           <p style="font-size:14px; color: var(--muted); margin-top:8px;">If the PDF viewer doesn't display, <a href="Gestura-AI-Powered-Mobile-Application-for-Inclusive-Communication.pdf" target="_blank" rel="noopener">open in a new tab</a>.</p>
         </div>
       </div>
+      <div class="card" style="margin-top:12px;">
+        <h3 style="margin:0 0 8px; font-size:16px;">Alternate: Google Slides Embed</h3>
+        <p style="margin:0 0 8px; color:var(--muted)">Publish a deck on Google Slides and replace the <code>src</code> below with your public embed URL:</p>
+        <pre style="white-space:pre-wrap; background:transparent; color:var(--muted); border:1px dashed color-mix(in oklab, var(--panel), #fff 14%); border-radius:12px; padding:10px; overflow:auto;">
+&lt;iframe src="https://docs.google.com/presentation/d/SLIDE_ID/embed?start=false&loop=true&delayms=5000" frameborder="0" width="100%" height="480" allowfullscreen mozallowfullscreen webkitallowfullscreen&gt;&lt;/iframe&gt;</pre>
+      </div>
     </section>
   </main>
 
@@ -301,3 +355,4 @@
   </script>
 </body>
 </html>
+
