Update profile image source in index.html

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
       </div>
       <div class="hero-card" aria-label="Key stats">
-        <img src="https://unavatar.io/https://www.linkedin.com/in/raven1202" alt="Raven Mott profile photo" style="width:128px;height:128px;border-radius:50%;object-fit:cover;display:block;margin:0 auto 12px;border:2px solid color-mix(in oklab, var(--panel), #fff 14%); box-shadow: var(--shadow);" />
+        <img src="Z63_6159.JPEG" alt="Raven Mott profile photo" style="width:128px;height:128px;border-radius:50%;object-fit:cover;display:block;margin:0 auto 12px;border:2px solid color-mix(in oklab, var(--panel), #fff 14%); box-shadow: var(--shadow);" />
         <h2 style="margin:0 0 10px;font-size:20px;text-align:center;">Highlights</h2>
         <ul style="margin:0;padding-left:18px;color:var(--muted)">
           <li>Android, Web, Data/ML, & Cyber Forensics</li>
