--- a/index.html
+++ b/index.html
@@ -341,18 +341,18 @@
 
       <div class="gif-track">
         <figure class="gif-slide is-active">
-          <img src="login.gif" alt="Login flow and bottom navigation coming online" loading="lazy" />
-          <figcaption>Milestone — Login + Bottom Navigation</figcaption>
+          <img src="login.gif" alt="Login flow" loading="lazy" />
+          <figcaption>Login </figcaption>
         </figure>
 
         <figure class="gif-slide">
           <img src="Lang.gif" alt="Language Translation screen with text and voice input" loading="lazy" />
-          <figcaption>Milestone — Language Translation module</figcaption>
+          <figcaption>Language Translation module</figcaption>
         </figure>
 
         <figure class="gif-slide">
-          <img src="bottom_nav.gif" alt="ASL Translation page with upload and processing UI" loading="lazy" />
-          <figcaption>Milestone — ASL Upload & Translate UI</figcaption>
+          <img src="bottom%20nav.gif" alt="ASL Translation page with upload and processing UI" loading="lazy" />
+          <figcaption>Bottom NAV</figcaption>
         </figure>
       </div>
 
