--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
         </figure>
 
         <figure class="gif-slide">
-          <img src="bottom%20nav.gif" alt="ASL Translation page with upload and processing UI" loading="lazy" />
+          <img src="bottomnav.gif" alt="ASL Translation page with upload and processing UI" loading="lazy" />
           <figcaption>Bottom NAV</figcaption>
         </figure>
       </div>
