--- a/index.html
+++ b/index.html
@@ -194,8 +194,10 @@
     <section class="hero" id="top">
       <div>
         <span class="badge" title="Virginia State University">CS @ VSU ’26 • Honors</span>
+        <span class="badge" title="Cybersecurity concentration & Math minor">Cybersecurity • Math Minor</span>
         <span class="badge" title="Johns Hopkins Explore Hopkins">EHOP ’25 Alum</span>
-        <h1>Android • Web • Data/ML • Cybersecurity<br />I build inclusive, reliable software.</h1>
+
+        <p>I’m Raven Mott, a CS student at Virginia State University (’26, Honors; Cybersecurity concentration; Math minor) who builds end-to-end systems at the intersection of mobile apps, data/ML, and cybersecurity. VSU’s support reshaped my path, and I try to honor that by shipping work that serves people—whether it’s <em>Gestura</em>, my AI-powered ASL translator inspired by Deaf family, climate-to-yield modeling that pairs rigor with real agronomy, or a malware triage pipeline that treats chain-of-custody as a first-class requirement. I lead by serving—mentoring peers, doing outreach, and connecting technical work to measurable public benefit. Long-term, I plan to serve in the Air Force’s cyber mission (17X) and later continue in federal service (FBI/CIA), focusing on secure systems, digital forensics, and trustworthy ML. Bottom line: I build reliable software that people can depend on—and I follow through until it’s useful in the real world.</p>
         <p class="lead">I’m Raven Mott — a Computer Science student who ships end-to-end: Android (Jetpack Compose), full-stack web (HTML/CSS/JS, Flask, Firebase), data & ML (TensorFlow/Sklearn), and cybersecurity/digital forensics (Wireshark, Autopsy, FTK). Current flagship: <strong>Gestura</strong>, an AI-powered ASL translator app.</p>
         <div class="chips" role="list" aria-label="Skills">
           <span class="chip" role="listitem">Kotlin / Compose</span>
